# teloxide

crates/teloxide-core/: Cargo.toml
crates/teloxide-core/src/: lib.rs  local_macros.rs
crates/teloxide-core/src/codegen/: patch.rs
crates/teloxide-core/src/media_types/: input_file.rs  input_media.rs  input_sticker.rs  mod.rs
crates/teloxide-core/src/payloads/: add_sticker_to_set.rs  create_new_sticker_set.rs  send_animation.rs  send_audio.rs  send_document.rs  send_photo.rs  send_sticker.rs  (+5 more)
crates/teloxide-types/: Cargo.toml  README.md
crates/teloxide-types/src/: animation.rs  audio.rs  bot_command_scope.rs  callback_query.rs  chat.rs  chat_id.rs  chat_invite_link.rs  chat_join_request.rs  chat_location.rs  chat_member.rs  chat_member_updated.rs  chosen_inline_result.rs  contact.rs  dice.rs  document.rs  encrypted_credentials.rs  encrypted_passport_element.rs  file.rs  force_reply.rs  forum_topic.rs  forum_topic_created.rs  game.rs  game_high_score.rs  inline_keyboard_button.rs  inline_keyboard_markup.rs  inline_query.rs  inline_query_result.rs  inline_query_result_article.rs  inline_query_result_audio.rs  inline_query_result_cached_audio.rs  inline_query_result_cached_document.rs  inline_query_result_cached_gif.rs  inline_query_result_cached_mpeg4_gif.rs  inline_query_result_cached_photo.rs  inline_query_result_cached_sticker.rs  inline_query_result_cached_video.rs  inline_query_result_cached_voice.rs  inline_query_result_contact.rs  inline_query_result_document.rs  inline_query_result_game.rs  (+45 more)
crates/teloxide-types/src/non_telegram_types/: until_date.rs
(+5 files in other folders)
