[package]
name = "teloxide-types"
version = "0.9.0"
description = "Types for the `teloxide` library - telegram bot API client"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

documentation = "https://docs.rs/teloxide-types/"
readme = "README.md"

keywords = ["teloxide", "telegram", "telegram-bot", "telegram-bot-api", "bot"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
serde_with_macros = "1.5.2"
chrono = { version = "0.4.19", default-features = false }
url = { version = "2", features = ["serde"] }
mime = "0.3.16"
derive_more = "0.99.9"
bitflags = { version = "1.2" }
reqwest = { version = "0.11.10", default-features = false }
cool_asserts = "2.0.3"
